corrects alignment for pricing card section

--- a/src/modules/prices-card.module/module.css
+++ b/src/modules/prices-card.module/module.css
@@ -7,6 +7,7 @@
   display: flex;
   flex-direction: column;
   gap: 1rem;
+  margin: 0 auto;
   transform: translateY(-40%);
   width: clamp(320px, 100vw, 1230px);
 }
@@ -140,7 +141,8 @@
 }
 
 .price-card__button-container {
-  height: clamp(60px, 22.5%, 106px);
+  /* height: clamp(60px, 22.5%, 106px); */
+  margin-top: 17%;
   padding: 11% 0 0;
   text-align: center;
   width: 100%;
